<resources>
    <string name="app_name">OPLCasino</string>
    <string name="edit_message">Enter a message</string>
    <string name="welcomeTitle">Welcome to jallen6\'s Casino App! :D</string>
    <string name="newGame">Start a new game!</string>
    <string name="loadIn">Load a Save Game</string>
    <string name="headsButtonText">Heads</string>
    <string name="tailsButtonText">Tails</string>
    <string name="coinTossString">Call the Coin Toss!</string>
    <string name="startButtonText">Start!</string>
    <string name="bottomPlayerName">Human Hand</string>
    <string name="topPlayer">Comp Hand</string>
    <string name="tableIdentifer">Table Cards</string>
    <string name="menuButtonText">Menu</string>
    <string name="confirmButtonText">Confirm Move</string>
    <string name="logLabel">Last Move (Log)</string>
    <string name="bottomPlayerPile">Human\nPile</string>
    <string name="caputreAction">Capture</string>
    <string name="buildAction">Build</string>
    <string name="trailAction">Trail</string>
    <string name="topPlayerPileLabel"> Computer\nPile </string>
    <string name="turnMenuTitle">What action would you like to do?</string>
    <string name="titleMenuSave">Save Game</string>
    <string name="titleMenuHelp">Ask for Help</string>
    <string name="titleMenuCancel">Close Menu</string>
    <string name="turnMenuQuit">Quit the game without saving</string>
    <string name="bottomPlayerNameCurrent">Human Hand (Current Player)</string>
    <string name="topPlayerNameCurrent">Computer Hand (Current Player)</string>
    <string name="mainMenu">Main Menu</string>
    <string name="loadScreenTitle">Tap a save file to load it:</string>
</resources>
